...
    <string name="api_expiry_date_format">MM/YY</string>

    <string name="feeInformation">%s fee</string>
    <string name="processingTimeInformation" translatable="false">\u0020\u2022 %s</string>
    <string name="noFee">No fee</string>

    <string name="emptyStateAddTransferMethod">Add a transfer method to get started.</string>

    <!-- menu title -->
    <string name="menu_transfer_funds">Transfer</string>

    <!--Fee formatter-->
    <string name="fee_flat_formatter">%1$s%2$s</string>
...
    <string name="selected_currency_item_description">Selected currency item</string>
    <string name="transfer_method_context_button_description">Context menu</string>
    <string name="item_select_description">Selected item</string>

    <string name="error_unmapped_field">Unmapped field, Please contact support.</string>

    <string name="country_placeholder">Canada</string>
    <string name="currency_placeholder">CAD</string>
    <string name="feesAndProcessTimePlaceholder">$20.00 USD fee \u2022 1\-3 Business Days </string>
    <string name="mobileCountryCurrencyLabel">LOCATION AND CURRENCY</string>
    <string name="mobileTransferMethodLabel">TRANSFER METHOD</string>
    <string name="mobileTransferMethodsHeader">Transfer methods</string>

    <string name="prepaidCardManagementInfo" >"Log in using a web browser to manage your card"</string>
</resources>

